kubernetes/home/prod-environment/leaderboard-site/oauth-forward-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-forward-auth
  namespace: prod-environment
spec:
  forwardAuth:
    # address: http://oauth-proxy.ms-sso.svc.cluster.local:4180/oauth2/auth
    address: https://auth.opryga.com/oauth2/auth
    trustForwardHeader: true
    authRequestHeaders:
      - "X-Forwarded-Host"
      - "X-Forwarded-Proto"
      - "X-Real-IP"
      - "X-Forwarded-For"
      - "Authorization"
      - "Cookie"
    # authResponseHeaders:
    #   - X-Auth-User
    #   - X-Auth-Request-Email
