kubernetes/home/prod-environment/leaderboard-site/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: leaderboard-site
  namespace: prod-environment
  annotations: 
    kubernetes.io/ingress.class: traefik-external
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-dev-ip-list@kubernetescrd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`leaderboard.oplabs.us`)
      kind: Rule
      services:
        - name: leaderboard-site
          port: 80
      middlewares:
        # - name: dev-ip-list 
        - name: default-headers
        - name: oauth-forward-auth  
  tls:
    secretName: oplabs-us-tls
